Add support for lower triangle

--- a/ch2_array/mkhole/Makefile
+++ b/ch2_array/mkhole/Makefile
@@ -22,7 +22,7 @@ $(foreach app,$(APPS),$(eval $(call EXPAND_VAR,$(app))))
 
 .PHONY : all clean
 
-CFLAGS  += 
+CFLAGS  += -Wall -g
 LDFLAGS +=
 
 all: $(OBJDIR) $(EXES)
